--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "json-server --watch db.json"
+    
   },
   "keywords": [],
   "author": "Saturno",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "git": "^0.1.5",
     "git-clone": "^0.2.0",
     "json-server": "^0.16.3"
