--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "json fake",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --watch db.json"
+    "start": "node app"
     
   },
   "keywords": [],
